test_translator/tests/data/checkpoint_2/core/pass/90_exception_any/solution.py
def might_raise():
    raise Exception("an error occurred")
