test_translator/tests/data/checkpoint_2/core/fail/90_exception_any/solution.py
def might_raise():
    return None
